Updated doc release: dev

--- a/dev/_static/articles_using_hyperspy.bib
+++ b/dev/_static/articles_using_hyperspy.bib
@@ -1,4 +1,16 @@
 
+@article{trasobares_chemical_2011,
+	title = {Chemical Imaging at Atomic Resolution as a Technique To Refine the Local Structure of Nanocrystals},
+	issn = {14337851},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/anie.201004502/abstract},
+	doi = {10.1002/anie.201004502},
+	journal = {Angewandte Chemie International Edition},
+	author = {Trasobares, Susana and {López-Haro}, Miguel and Kociak, Mathieu and March, Katia and de La Peña, Francisco and {Perez-Omil}, Jose A. and Calvino, Jose J. and Lugg, Nathan R. and {D'Alfonso}, Adrian J. and Allen, Leslie J. and Colliex, Christian},
+	month = jan,
+	year = {2011},
+	pages = {n/a--n/a}
+},
+
 @article{estrade_cationic_2008,
 	title = {Cationic and charge segregation in La[sub {2/3]Ca[sub} {1/3]MnO[sub} 3] thin films grown on (001) and (110) {SrTiO[sub} 3]},
 	volume = {93},
@@ -10,6 +22,22 @@
 	year = {2008},
 	keywords = {My Publications},
 	pages = {112505--3}
+},
+
+@article{de_la_pena_full_2010,
+	title = {Full field chemical imaging of buried native sub-oxide layers on doped silicon patterns},
+	volume = {604},
+	issn = {0039-6028},
+	url = {http://www.sciencedirect.com/science/article/B6TVX-509XPNT-3/2/aa36bb3b2b7d94cee13ee35b9d1c39d1},
+	doi = {10.1016/j.susc.2010.06.006},
+	abstract = {Fully energy-filtered X-ray photoelectron emission microscopy is used to analyze the spatial distribution of the silicon sub-oxide structure at the {SiO2/Si} interface as a function of underlying doping pattern. Using a spectroscopic pixel-by-pixel curve fitting analysis, we obtain the sub-oxide binding energy and intensity distributions over the full field of view. Binding energy maps for each oxidation state are obtained with a spatial resolution of 120 nm. Within the framework of a five-layer model, the experimental data are used to obtain quantitative maps of the sub-oxide layer thickness and also their spatial distribution over the p-n junctions. Variations in the sub-oxide thicknesses are found to be linked to the level and type of doping. The procedure, which takes into account instrumental artefacts, enables the quantitative analysis of the full {3D} dataset.},
+	number = {19-20},
+	journal = {Surface Science},
+	author = {de la Peña, F. and Barrett, N. and Zagonel, {L.F.} and Walls, M. and Renault, O.},
+	month = sep,
+	year = {2010},
+	keywords = {Photoelectron emission, Photoelectron emission microscopy {(XPEEM)}, Semiconductor-insulator interfaces, Semiconductor-semiconductor thin film structures, Silicon oxides, Synchrotron radiation photoelectron spectroscopy},
+	pages = {1628--1636}
 },
 
 @article{arenal_extending_2008,
@@ -43,37 +71,6 @@
 	pages = {145606}
 },
 
-@article{de_la_pena_full_2010,
-	title = {Full field chemical imaging of buried native sub-oxide layers on doped silicon patterns},
-	volume = {604},
-	issn = {0039-6028},
-	url = {http://www.sciencedirect.com/science/article/B6TVX-509XPNT-3/2/aa36bb3b2b7d94cee13ee35b9d1c39d1},
-	doi = {10.1016/j.susc.2010.06.006},
-	abstract = {Fully energy-filtered X-ray photoelectron emission microscopy is used to analyze the spatial distribution of the silicon sub-oxide structure at the {SiO2/Si} interface as a function of underlying doping pattern. Using a spectroscopic pixel-by-pixel curve fitting analysis, we obtain the sub-oxide binding energy and intensity distributions over the full field of view. Binding energy maps for each oxidation state are obtained with a spatial resolution of 120 nm. Within the framework of a five-layer model, the experimental data are used to obtain quantitative maps of the sub-oxide layer thickness and also their spatial distribution over the p-n junctions. Variations in the sub-oxide thicknesses are found to be linked to the level and type of doping. The procedure, which takes into account instrumental artefacts, enables the quantitative analysis of the full {3D} dataset.},
-	number = {19-20},
-	journal = {Surface Science},
-	author = {de la Peña, F. and Barrett, N. and Zagonel, {L.F.} and Walls, M. and Renault, O.},
-	month = sep,
-	year = {2010},
-	keywords = {Photoelectron emission, Photoelectron emission microscopy {(XPEEM)}, Semiconductor-insulator interfaces, Semiconductor-semiconductor thin film structures, Silicon oxides, Synchrotron radiation photoelectron spectroscopy},
-	pages = {1628--1636}
-},
-
-@article{sarahan_point_2011,
-	title = {Point defect characterization in {HAADF-STEM} images using multivariate statistical analysis},
-	volume = {111},
-	issn = {0304-3991},
-	url = {http://www.sciencedirect.com/science/article/B6TW1-51KK988-5/2/d2108caac3d84f3edde17a4204ab5a11},
-	doi = {10.1016/j.ultramic.2010.11.033},
-	abstract = {Quantitative analysis of point defects is demonstrated through the use of multivariate statistical analysis. This analysis consists of principal component analysis for dimensional estimation and reduction, followed by independent component analysis to obtain physically meaningful, statistically independent factor images. Results from these analyses are presented in the form of factor images and scores. Factor images show characteristic intensity variations corresponding to physical structure changes, while scores relate how much those variations are present in the original data. The application of this technique is demonstrated on a set of experimental images of dislocation cores along a low-angle tilt grain boundary in strontium titanate. A relationship between chemical composition and lattice strain is highlighted in the analysis results, with picometer-scale shifts in several columns measurable from compositional changes in a separate column.},
-	number = {3},
-	journal = {Ultramicroscopy},
-	author = {Sarahan, Michael C. and Chi, Miaofang and Masiel, Daniel J. and Browning, Nigel D.},
-	year = {2011},
-	keywords = {{ICA}, {MVA}, {STEM}},
-	pages = {251--257}
-},
-
 @article{de_la_pena_mapping_2011,
 	title = {Mapping titanium and tin oxide phases using {EELS:} An application of independent component analysis},
 	volume = {111},
@@ -91,14 +88,14 @@
 	pages = {169--176}
 },
 
-@article{trasobares_chemical_2011,
-	title = {Chemical Imaging at Atomic Resolution as a Technique To Refine the Local Structure of Nanocrystals},
-	issn = {14337851},
-	url = {http://onlinelibrary.wiley.com/doi/10.1002/anie.201004502/abstract},
-	doi = {10.1002/anie.201004502},
-	journal = {Angewandte Chemie International Edition},
-	author = {Trasobares, Susana and {López-Haro}, Miguel and Kociak, Mathieu and March, Katia and de La Peña, Francisco and {Perez-Omil}, Jose A. and Calvino, Jose J. and Lugg, Nathan R. and {D'Alfonso}, Adrian J. and Allen, Leslie J. and Colliex, Christian},
-	month = jan,
+@article{cooper_field_2011,
+	title = {Field Mapping with {Nanometer-Scale} Resolution for the Next Generation of Electronic Devices},
+	issn = {1530-6984, 1530-6992},
+	url = {http://pubs.acs.org/doi/abs/10.1021/nl201813w},
+	doi = {10.1021/nl201813w},
+	journal = {Nano Letters},
+	author = {Cooper, David and de la Peña, Francisco and Béché, Armand and Rouvière, {Jean-Luc} and Servanton, Germain and Pantel, Roland and Morin, Pierre},
+	month = oct,
 	year = {2011},
-	pages = {n/a--n/a}
+	pages = {111013111159007}
 }
