--- a/dev/_sources/user_guide/install.txt
+++ b/dev/_sources/user_guide/install.txt
@@ -75,14 +75,15 @@ To create a Windows binary run the `release_windows.bat` script in a windows mac
 
 .. _install-dependencies:
 
-Installing the dependencies
----------------------------
+Installing the required libraries
+---------------------------------
 
-The easiest way to install these packages is by installing the `enthough python distribution <http://www.enthought.com/products/epd.php>`_ (EPD) that from version 0.7.1 comes with most Hyperspy dependencies installed by default.
+The easiest way to install these packages is by installing the `enthough python distribution <http://www.enthought.com/products/epd.php>`_ (EPD) that from version 0.7.1 comes with all the required libraries installed by default. Please note that the academic version of EPD is free, `you can get it here <http://www.enthought.com/products/edudownload.php>`_
+
 
 Another option in Windows is to install `pythonxy <http://www.pythonxy.com/>`_.
 
-If you use a Debian/Ubuntu binary to install Hyperspy all the dependencies should install automatically. Otherwise you must install the following packages (note that we use the Debian/Ubuntu package names): ``python-numpy``  ``python-scipy`` ``python-matplotlib`` ``ipython`` ``python-mdp`` ``python-netcdf`` ``python-h5py`` ``python-traits`` ``python-traitsgui`` ``python-nose`` ``python-opencv`` ``python-chaco``.
+If you use a Debian/Ubuntu binary to install Hyperspy all the dependencies should install automatically. Otherwise you must install the following packages (note that we use the Debian/Ubuntu package names): ``python-numpy``  ``python-scipy`` ``python-matplotlib`` ``ipython`` ``python-mdp`` ``python-netcdf`` ``python-h5py`` ``python-traits`` ``python-traitsui`` ``python-nose`` ``python-opencv`` ``python-chaco``.
 
 
 
