--- a/current/_sources/user_guide/install.txt
+++ b/current/_sources/user_guide/install.txt
@@ -36,6 +36,8 @@ For more options and details read the rest of the documentation.
 
 Install using Python installers
 -------------------------------
+.. WARNING::
+    Although it is possible to install hyperspy in Windows using the instructions of this section, installing using the Windows installer is reccomended in this platform because the Python installers do not create entries in the ``Start Menu`` or the ``Context Menu``
 
 Since version 4.1 Hyperspy is listed in the `Python Package Index <http://pypi.python.org/pypi>`_. Therefore, it can be automatically downloaded and installed using `distribute <http://pypi.python.org/pypi/distribute>`_ or (our favourite) `pip <http://pypi.python.org/pypi/pip>`_. Depending on your Python distribution, you might need to install at least one of these packages manually.
 
@@ -139,6 +141,23 @@ Before installing Hyperspy Python and the following libraries be installed in th
 In Windows and Mac the easiest way to install these packages is by installing the `enthought python distribution. <http://www.enthought.com/products/epd.php>`_ (EPD) that from version 0.7.1 comes with all the required libraries included by default. Academics can get it free `here <http://www.enthought.com/products/edudownload.php>`_ .
 
 If you use an Ubuntu binary to install Hyperspy all the dependencies should install automatically.
+
+.. _known-issues
+
+Known issues
+------------
+
+Windows
+^^^^^^^
+
+* Hyperspy does not work with an standard installation of the full version of EPD 7.3-2 due to a problem of compilation in the h5py. The easiest way to walkaround this issue is reinstalling the h5py libraries. You can download them `from here. <http://www.lfd.uci.edu/~gohlke/pythonlibs/#h5py>`_
+* Due to a `Python bug <http://bugs.python.org/issue13276>`_ uninstalling Hyperspy does not uninstall the "Hyperspy Here" entries in the context menu. Please run the following code in a Windows Terminal with administrator rights to remove the entries manually:
+  
+  .. code-block:: bash
+
+    $ uninstall_hyperspy_here
+
+    
 
 
 
