Updated doc release: current

--- a/current/_sources/user_guide/install.txt
+++ b/current/_sources/user_guide/install.txt
@@ -14,10 +14,13 @@ For installing in any other platform you can :ref:`install-with-python-installer
 Quick instructions to install Hyperspy in Windows
 -------------------------------------------------
 
-#. Download and install `EPD. <http://www.enthought.com/products/epd.php>`_ EPD is reccomended for the best performance (it is compiled using Intel MKL libraries) and the easiest intallation (all the required libraries are incluided). The academic license is free and it can be obtained `here. <http://www.enthought.com/products/edudownload.php>`_
-#. (Maybe) Restart the computer
+#. Download and install `EPD. <http://www.enthought.com/products/epd.php>`_ EPD is reccomended for the best performance (it is compiled using Intel MKL libraries) and the easiest intallation (all the required libraries are incluided). The academic license is free and it can be obtained `here. <http://www.enthought.com/products/edudownload.php>`_ Since version 0.5 Hyperspy runs (with limited functionality) in `EPD free <https://www.enthought.com/repo/free/>`_ .
+#. **Restart the computer**
 #. Download and install Hyperspy from the `Download section <http://hyperspy.org/download.html>`_
 
+.. WARNING::
+    Read :ref:`known-issues` before installing
+    
 For more options and details read the rest of the documentation.
 
 .. _quick-mac-install:
@@ -26,7 +29,7 @@ For more options and details read the rest of the documentation.
 Quick instructions to install Hyperspy in MacOs
 -------------------------------------------------
 
-#. Download and install `EPD. <http://www.enthought.com/products/epd.php>`_ **Do not install the 64bits version even if your processor is 64bits because it does not include the Python WX libraries which are required by Hyperspy**. EPD is reccomended for the best performance (it is compiled using Intel MKL libraries) and the easiest intallation (all the required libraries are incluided). The academic license is free and it can be obtained `here. <http://www.enthought.com/products/edudownload.php>`_
+#. Download and install `EPD. <http://www.enthought.com/products/epd.php>`_ **Do not install the 64bits version even if your processor is 64bits because it does not include the Python WX libraries which are required by Hyperspy**. EPD is reccomended for the best performance (it is compiled using Intel MKL libraries) and the easiest intallation (all the required libraries are incluided). The academic license is free and it can be obtained `here. <http://www.enthought.com/products/edudownload.php>`_  Since version 0.5 Hyperspy runs (with limited functionality) in `EPD free <https://www.enthought.com/repo/free/>`_ .
 #. Open a new terminal and type: `easy_install hyperspy`
 
 For more options and details read the rest of the documentation.
@@ -138,11 +141,11 @@ Installing the required libraries
     
 Before installing Hyperspy Python and the following libraries be installed in the system: numpy, scipy, matplotlib, ipython, traits and traitsui. For full functionality it is reccomended to also install h5py, mdp and scikit-learn. In Windows Hyperspy uses the Ipython's QtConsole nd therefore Qt and PyQt or PySide are also required.
 
-In Windows and Mac the easiest way to install these packages is by installing the `enthought python distribution. <http://www.enthought.com/products/epd.php>`_ (EPD) that from version 0.7.1 comes with all the required libraries included by default. Academics can get it free `here <http://www.enthought.com/products/edudownload.php>`_ .
+In Windows and Mac the easiest way to install these packages is by installing the `enthought python distribution. <http://www.enthought.com/products/epd.php>`_ (EPD) that from version 0.7.1 comes with all the required libraries included by default. Academics can get it free `here <http://www.enthought.com/products/edudownload.php>`_ .  Since version 0.5 Hyperspy runs (with limited functionality) in `EPD free <https://www.enthought.com/repo/free/>`_ .
 
 If you use an Ubuntu binary to install Hyperspy all the dependencies should install automatically.
 
-.. _known-issues
+.. _known-issues:
 
 Known issues
 ------------
@@ -151,6 +154,7 @@ Windows
 ^^^^^^^
 
 * Hyperspy does not work with an standard installation of the full version of EPD 7.3-2 due to a problem of compilation in the h5py. The easiest way to walkaround this issue is reinstalling the h5py libraries. You can download them `from here. <http://www.lfd.uci.edu/~gohlke/pythonlibs/#h5py>`_
+* In some Windows machines an error is printed at the end of the installation and the entries in the context menu and the Start Menu are not installed properly. In most cases the problem can be solved by restarting the computer and reinstalling Hyperspy.
 * Due to a `Python bug <http://bugs.python.org/issue13276>`_ uninstalling Hyperspy does not uninstall the "Hyperspy Here" entries in the context menu. Please run the following code in a Windows Terminal with administrator rights to remove the entries manually:
   
   .. code-block:: bash
